RESOLVED FIXED157256
AX: Crash at WebCore::AccessibilityObject::getAttribute const + 9
https://bugs.webkit.org/show_bug.cgi?id=157256
Summary AX: Crash at WebCore::AccessibilityObject::getAttribute const + 9
Nan Wang
Reported 2016-05-01 19:50:42 PDT
> 1 com.apple.WebCore 0x002c7459 WebCore::AccessibilityObject::getAttribute(WebCore::QualifiedName const&) const + 9 2 com.apple.WebCore 0x002c061c WebCore::AccessibilityNodeObject::titleElementText(WTF::Vector<WebCore::AccessibilityText, 0ul, WTF::CrashOnOverflow, 16ul>&) const + 188 3 com.apple.WebCore 0x002c29ac WebCore::AccessibilityNodeObject::accessibilityText(WTF::Vector<WebCore::AccessibilityText, 0ul, WTF::CrashOnOverflow, 16ul>&) + 28 4 com.apple.WebCore 0x010e634d -[WebAccessibilityObjectWrapperBase baseAccessibilityDescription] + 93 5 com.apple.WebCore 0x010f0545 -[WebAccessibilityObjectWrapper accessibilityAttributeValue:] + 245
Attachments
Initial patch (4.34 KB, patch)
2016-05-01 20:02 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-05-01 19:51:37 PDT
Nan Wang
Comment 2 2016-05-01 20:02:09 PDT
Created attachment 277886 [details] Initial patch
WebKit Commit Bot
Comment 3 2016-05-01 23:14:02 PDT
Comment on attachment 277886 [details] Initial patch Clearing flags on attachment: 277886 Committed r200318: <http://trac.webkit.org/changeset/200318>
WebKit Commit Bot
Comment 4 2016-05-01 23:14:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.